# build-qrc

./: Cargo.toml  README.md
src/: lib.rs
